# kthxbye

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
kthxbye/: asgi.py  settings.py  urls.py  wsgi.py
