[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spam-eggs"
version = "2020.0.0"
dependencies = [
    "astroid==3.1.0",
    "autopep8==2.1.0",
    "beautifulsoup4==4.12.3",
    "black==24.4.2",
    "blinker==1.8.1",
    "bs4==0.0.2",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cryptography==42.0.6",
    "decorator==5.1.1",
    "dill==0.3.8",
    "et-xmlfile==1.1.0",
    "flask==3.0.3",
    "html5lib==1.1",
    "idna==3.7",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.3",
    "markupsafe==2.1.5",
    "mccabe==0.7.0",
    "mypy==1.10.0",
    "mypy-extensions==1.0.0",
    "openpyxl==3.1.2",
    "packaging==24.0",
    "pathspec==0.12.1",
    "pdfminer-six==20231228",
    "pdfplumber==0.11.0",
    "pillow==10.3.0",
    "platformdirs==4.2.1",
    "pluggy==1.5.0",
    "py==1.11.0",
    "pycodestyle==2.11.1",
    "pycparser==2.22",
    "pylint==3.1.0",
    "pypdfium2==4.29.0",
    "pytest==8.2.0",
    "requests==2.31.0",
    "retry==0.9.2",
    "six==1.16.0",
    "soupsieve==2.5",
    "tenacity==8.2.3",
    "tomlkit==0.12.4",
    "typing-extensions==4.11.0",
    "urllib3==2.2.1",
    "warn-scraper==1.2.72",
    "webencodings==0.5.1",
    "werkzeug==3.0.2",
    "xlrd==2.0.1",
]
requires-python = ">=3.8"
authors = [
  {name = "Sam Johnson", email = "sambjohnson94@protonmail.com"},
]
maintainers = [
  {name = "Sam Johnson", email = "sambjohnson94@protonmail.com"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

