[tool.poetry]
name = "kthxbye"
version = "0.1.0"
description = ""
authors = ["Sam Johnson <sambjohnson94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.6"


[tool.poetry.group.dev.dependencies]
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
